<resources>
    <string name="app_name"> RTN/Requisitos </string>
    <string name="siguiente">Pagina 1</string>
    <string name="zygote_android_hardware_configstore_v1_0_isurfaceflingerconfigs_haswidecolordisplay_retrieved_0_i_openglrenderer_initialized_egl_version_1_4_d_openglrenderer_swap_behavior_1_w_openglrenderer_failed_to_choose_config_with_egl_swap_behavior_preserved_retrying_without_d_openglrenderer_swap_behavior_0_d_egl_emulation_eglcreatecontext_0xe37bb8a0_maj_2_min_0_rcv_2_d_egl_emulation_eglmakecurrent_0xe37bb8a0_ver_2_0_tinfo_0xe37be8c0_i_choreographer_skipped_2309_frames_the_application_may_be_doing_too_much_work_on_its_main_thread_d_egl_emulation_eglmakecurrent_0xe37bb8a0_ver_2_0_tinfo_0xe37be8c0">/zygote: android::hardware::configstore::V1_0::ISurfaceFlingerConfigs::hasWideColorDisplay retrieved: 0 I/OpenGLRenderer: Initialized EGL, version 1.4 D/OpenGLRenderer: Swap behavior 1 W/OpenGLRenderer: Failed to choose config with EGL_SWAP_BEHAVIOR_PRESERVED, retrying without... D/OpenGLRenderer: Swap behavior 0 D/EGL_emulation: eglCreateContext: 0xe37bb8a0: maj 2 min 0 rcv 2 D/EGL_emulation: eglMakeCurrent: 0xe37bb8a0: ver 2 0 (tinfo 0xe37be8c0) I/Choreographer: Skipped 2309 frames! The application may be doing too much work on its main thread. D/EGL_emulation: eglMakeCurrent: 0xe37bb8a0: ver 2 0 (tinfo 0xe37be8c0)</string>
    <string name="pagina_2">Pagina 2</string>
    <string name="atras1">Atras</string>
    <string name="hola_esta_es_la_pagina_3">Hola esta es la pagina 3</string>
    <string name="salir">Salir</string>
    <string name="atras3">Atras</string>
    <string name="hola_esta_es_la_pagina_2">Hola esta es la pagina 2</string>
    <string name="atras2">Atras</string>
    <string name="pagina_3">Pagina 3</string>
    <string name="pagina_4">Pagina 4</string>
    <string name="esta_es_la_pagina_3">Esta es la pagina 3</string>
    <string name="atras4">Atras</string>
    <string name="atras5">Atras</string>
    <string name="esta_es_la_pagina_4">Esta es la pagina 4</string>
    <string name="atras6">Atras</string>
    <string name="atras10">Atras</string>
    <string name="textview">hola</string>
    <string name="hola">hola</string>
    <string name="considerando_que_en_la_actualidad_los_grupos_de_asociaci_n_il_cita_han_evolucionado_su_modus_operandi_de_tal_forma_que_su_actividad_delictiva_no_solamente_va_dirigida_a_producir_un_da_o_espec_fico_contra_sus_v_ctimas_sino_que_utilizan_este_da_o_o_amenaza_como_medio_para_causar_intimidaci_n_y_temor_en_la_poblaci_n_con_el_objeto_de_coaccionar_a_la_sociedad_o_al_estado_para_que_hagan_o_dejen_de_hacer_algo_considerando_que_de_conformidad_con_el_art_culo_87_de_la_constituci_n_de_la_rep_blica_las_c_rceles_son_establecimientos_de_seguridad_y_defensa_social_en_los_que_se_procurar_la_rehabilitaci_n_de_las_personas_privadas_de_libertad_y_su_preparaci_n_para_el_trabajo_considerando_que_los_establecimientos_penales_constituyen_un_componente_esencial_del_sistema_de_justicia_penal_del_pa_s_para_garantizar_la_seguridad_de_los_habitantes_de_la_rep_blica">CONSIDERANDO: Que en la actualidad los grupos de asociación ilícita han evolucionado su modus operandi, de tal forma que su actividad delictiva no solamente va dirigida a producir un daño específico contra sus víctimas, sino que utilizan este daño o amenaza, como medio para causar intimidación y temor en la población, con el objeto de coaccionar a la sociedad o al Estado para que hagan o dejen de hacer algo. CONSIDERANDO: Que de conformidad con el Artículo 87 de la Constitución de la República, las cárceles son establecimientos de seguridad y defensa social, en los que se procurará la rehabilitación de las personas privadas de libertad y su preparación para el trabajo. CONSIDERANDO: Que los establecimientos penales constituyen un componente esencial del Sistema de Justicia Penal del país para garantizar la seguridad de los habitantes de la República.</string>
    <string name="requisitos_persona_natural_llenar_y_firmar_la_declaraci_n_jurada_de_inscripci_n_actualizaci_n_de_persona_natural_en_el_formulario_sar_410_1_tarjeta_de_identidad_para_hondure_os_original_y_fotocopia_2_pasaporte_o_carn_de_residente_para_extranjeros_original_y_fotocopia_3_original_y_fotocopia_del_documento_que_acredite_su_direcci_n_exacta_recibo_de_un_servicio_p_blico_contrato_de_alquiler_o_arrendamiento_comercial_constancia_de_la_vecindad_recibo_de_suscripci_n_de_servicios_privados_internet_cable_telefon_a_4_en_caso_de_ser_solicitado_por_un_representante_procesal_o_apoderado_legal_se_deber_de_identificar_lo_siguiente_si_tiene_facultades_para_compadecer_a_realizar_el_tr_mite_si_tiene_facultades_para_firmar_si_tiene_facultades_nicamente_para_presentar_y_no_firmar_deber_de_presentar_el_formulario_410_firmado_por_el_obligado_tributario_este_deber_acompa_ar_original_y_fotocopia_del_poder_o_carta_poder_debidamente_autenticado_y_fotocopia_de_su_tarjeta_de_identidad_no_ser_requerida_la_presentaci_n_del_documento_original_de_la_tarjeta_de_identidad_pasaporte_o_carn_de_residencia_de_la_persona_representada_personas_natural_que_requiere_rtn_para_gestionar_una_fyduca_de_oficio_rtn_emitido_nicamente_en_los_centros_de_control_de_los_puestos_fronterizos_integrados_de_la_uni_n_aduanera_guatemala_honduras_y_el_salvador_para_aquellas_personas_ciudadanos_de_los_estados_parte_que_no_presentan_declaraci_n_mensual_de_impuesto_sobre_ventas_1_llenar_y_firmar_declaraci_n_jurada_de_inscripci_n_actualizaci_n_de_persona_natural_formulario_sar_410_2_identificaci_n_emitida_en_uno_de_los_pa_ses_partes_original_y_fotocopia">Requisitos persona natural Llenar y firmar la declaración Jurada de Inscripción/Actualización de Persona Natural, en el formulario SAR-410. 1. Tarjeta de Identidad para hondureños (Original y Fotocopia). 2. Pasaporte o Carné de Residente para extranjeros (Original y Fotocopia). 3. Original y Fotocopia del Documento que acredite su dirección exacta: • Recibo de un Servicio Público. • Contrato de Alquiler o Arrendamiento Comercial. • Constancia de la Vecindad. • Recibo de suscripción de Servicios Privados (Internet, cable, telefonía). 4. En caso de ser solicitado por un representante procesal o apoderado legal, se deberá de identificar lo siguiente: • Si tiene facultades para compadecer a realizar el trámite • Si tiene facultades para firmar • Si tiene facultades únicamente para presentar y no firmar, deberá de presentar el formulario 410 firmado por el Obligado Tributario Este deberá acompañar original y fotocopia del poder o carta poder debidamente autenticado y fotocopia de su Tarjeta de Identidad, no será requerida la presentación del documento original de la tarjeta de identidad, pasaporte o carné de residencia de la persona representada. Personas Natural que requiere RTN para gestionar una FYDUCA de Oficio: RTN emitido únicamente en los Centros de Control de los Puestos Fronterizos Integrados de la Unión Aduanera Guatemala, Honduras y El Salvador, para aquellas personas ciudadanos de los Estados Parte que no presentan Declaración Mensual de Impuesto Sobre Ventas. 1) Llenar y firmar Declaración Jurada de Inscripción/Actualización de Persona Natural, formulario SAR-410. 2) Identificación emitida en uno de los países partes (Original y Fotocopia).</string>
    <string name="inscripci_n_de_rtn">Inscripción de RTN</string>
    <string name="inscripci_n_del_rtn3">Inscripción del RTN</string>
    <string name="actualizaci_n_del_rtn2">Actualización del RTN</string>
    <string name="persona_natural_comerciante_individual_1_tarjeta_de_identidad_para_hondure_os_original_y_fotocopia_2_pasaporte_o_carn_de_residente_para_extranjeros_original_y_fotocopia_3_llenar_y_firmar_declaraci_n_jurada_de_inscripci_n_actualizaci_n_de_persona_natural_formulario_sar_410_4_llenar_y_firmar_formulario_anexo_410_a_declaraci_n_jurada_de_inscripciones_inicio_de_actividades_y_actualizaci_n_al_registro_tributario_nacional_en_caso_de_establecimientos_agencias_o_sucursales_5_documento_original_y_fotocopia_del_permiso_de_operaciones_o_solicitud_de_tr_mite_presentada_en_la_alcald_a_municipal_establecimientos_agencias_o_sucursales_de_comerciantes_individuales_6_comprobante_de_domicilio_que_contenga_la_direcci_n_exacta_original_y_fotocopia_de_los_siguientes_documentos_o_recibo_de_un_servicio_p_blico_contrato_de_alquiler_o_arrendamiento_comercial_constancia_de_la_vecindad_persona_natural_recibo_de_suscripci_n_de_servicios_privados_internet_cable_telefon_a">Persona Natural/ Comerciante Individual:: 1) Tarjeta de Identidad para hondureños (Original y Fotocopia); 2) Pasaporte o Carné de Residente para extranjeros (Original y Fotocopia); 3) Llenar y firmar Declaración Jurada de Inscripción/Actualización de Persona Natural, Formulario SAR-410; 4) Llenar y firmar Formulario Anexo 410 A; Declaración Jurada de Inscripciones, Inicio de Actividades y Actualización al Registro Tributario Nacional. En caso de (Establecimientos, Agencias o Sucursales); 5) Documento Original y Fotocopia del Permiso de Operaciones o solicitud de trámite presentada en la Alcaldía Municipal (Establecimientos, Agencias o Sucursales de Comerciantes Individuales). 6) Comprobante de Domicilio que contenga la dirección exacta: original y fotocopia de los siguientes documentos. o Recibo de un Servicio Público. • Contrato de Alquiler o Arrendamiento Comercial. • Constancia de la Vecindad (Persona Natural). • Recibo de suscripción de Servicios Privados (Internet, cable, telefonía).</string>
    <string name="actualizaci_n_del_rtn1">Actualización del RTN</string>
    <string name="actualizaci_n_del_rtn">Actualización del RTN</string>
    <string name="inscripci_n_del_rtn">Inscripción del RTN</string>
    <string name="declarraci_n_inicio_de_operaciones">DECLARACIÓN INICIO DE OPERACIONES</string>
    <string name="actualizaci_n_o_rescisi_n_de_contrato_de_adhesi_n">ACTUALIZACIÓN O RESCISIÓN DE CONTRATO DE ADHESIÓN</string>
    <string name="contrato_de_adhesi_n_debidamente_firmado_por_el_representante_legal_fotocopia_de_tarjeta_de_identidad_o_carn_de_residencia_del_representante_legal_original_de_la_solicitud_actualizaci_n_o_recisi_n_del_contrato_de_adhesi_n_en_caso_de_ser_solicitado_por_un_representante_procesal_o_apoderado_legal_se_deber_de_identificar_lo_siguiente_1_si_tiene_facultades_para_comparecer_a_realizar_el_tr_mite_2_si_tiene_facultades_para_firmar_3_si_tiene_facultades_nicamente_para_presentar_y_no_firmar_deber_de_presentar_el_formulario_410_firmado_por_el_obligado_tributario_este_deber_acompa_ar_original_y_fotocopia_del_poder_o_carta_poder_debidamente_autenticado_y_fotocopia_de_su_tarjeta_de_identidad_no_ser_requerida_la_presentaci_n_del_documento_original_de_la_tarjeta_de_identidad_pasaporte_o_carn_de_residencia_de_la_persona_representada">• Contrato de Adhesión debidamente firmado por el Representante Legal. • Fotocopia de tarjeta de identidad o carné de residencia del Representante Legal. • Original de la solicitud actualización o recisión del contrato de adhesión • En caso de ser solicitado por un representante procesal o apoderado legal, se deberá de identificar lo siguiente: 1. Si tiene facultades para comparecer a realizar el trámite 2. Si tiene facultades para firmar 3. Si tiene facultades únicamente para presentar y no firmar, deberá de presentar el formulario 410 firmado por el Obligado Tributario Este deberá acompañar original y fotocopia del poder o carta poder debidamente autenticado y fotocopia de su Tarjeta de Identidad, no será requerida la presentación del documento original de la Tarjeta de Identidad, Pasaporte o Carné de Residencia de la persona representada.</string>
    <string name="aceptaci_n_actualizaci_n_o_rescisi_n_de_contrato_de_adhesi_n">ACEPTACIÓN, ACTUALIZACIÓN O RESCISIÓN DE CONTRATO DE ADHESIÓN</string>
    <string name="declaraci_n_inicio_de_operaciones">DECLARACIÓN INICIO DE OPERACIONES</string>
    <string name="aplicacion_grupo_3">Aplicacion grupo 3</string>
</resources>