<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@drawable/fondoac">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="263dp"
        android:layout_marginRight="263dp"
        android:onClick="atras3"
        android:text="@string/atras10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/declaracion"
        android:layout_width="267dp"
        android:layout_height="404dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:scrollbars="vertical"
        android:text="@string/contrato_de_adhesi_n_debidamente_firmado_por_el_representante_legal_fotocopia_de_tarjeta_de_identidad_o_carn_de_residencia_del_representante_legal_original_de_la_solicitud_actualizaci_n_o_recisi_n_del_contrato_de_adhesi_n_en_caso_de_ser_solicitado_por_un_representante_procesal_o_apoderado_legal_se_deber_de_identificar_lo_siguiente_1_si_tiene_facultades_para_comparecer_a_realizar_el_tr_mite_2_si_tiene_facultades_para_firmar_3_si_tiene_facultades_nicamente_para_presentar_y_no_firmar_deber_de_presentar_el_formulario_410_firmado_por_el_obligado_tributario_este_deber_acompa_ar_original_y_fotocopia_del_poder_o_carta_poder_debidamente_autenticado_y_fotocopia_de_su_tarjeta_de_identidad_no_ser_requerida_la_presentaci_n_del_documento_original_de_la_tarjeta_de_identidad_pasaporte_o_carn_de_residencia_de_la_persona_representada"
        android:textColor="@android:color/black"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/aceptaci_n_actualizaci_n_o_rescisi_n_de_contrato_de_adhesi_n"
        android:textColor="@color/colortrxtoi"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/declaracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


</androidx.constraintlayout.widget.ConstraintLayout>